--- a/style.css
+++ b/style.css
@@ -124,6 +124,12 @@ h1{
     width: 30vw;
 }
 
+.video-insert{
+  width: 50%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media only screen and (max-width: 640px){
 
     h1 {
@@ -138,12 +144,20 @@ h1{
     .logo{
         width: 60vw;
     }
+    .logo-container{
+        height: 30vh;
+    }
     .maggi-mobile{
         display: flex;
         height: auto;
         background-image: url("img/maggi-mobile.jpg");
         width: 100%;
         background-size: cover;
+    }
+    .video-insert{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
 }
