--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -70,48 +69,115 @@ input{
 /* -- Font links -- */
 
 @font-face {                                                                                                                                                                                                                                                                              
-    font-family:'Light';                                                                                                                                                                                                                                                                
-    src: url(Graphik/Light.woff) format("woff");                                                                                                                                                                                                                                                                                                                                                                                                                                       
-}
-@font-face {                                                                                                                                                                                                                                                                              
     font-family:'Regular';                                                                                                                                                                                                                                                                
-    src: url(Graphik/Regular.woff) format("woff");                                                                                                                                                                                                                                                                                                                                                                                                                                       
+    src: url(America/GT-America-Regular.woff) format("woff");                                                                                                                                                                                                                                                                                                                                                                                                                                       
 }
 @font-face {                                                                                                                                                                                                                                                                              
     font-family:'Medium';                                                                                                                                                                                                                                                                
-    src: url(Graphik/Medium.woff) format("woff");                                                                                                                                                                                                                                                                                                                                                                                                                                       
+    src: url(America/GT-America-Medium.woff) format("woff");                                                                                                                                                                                                                                                                                                                                                                                                                                      
+}
+@font-face {                                                                                                                                                                                                                                                                              
+    font-family:'Bold';                                                                                                                                                                                                                                                                
+    src: url(America/GT-America-Bold.woff) format("woff");                                                                                                                                                                                                                                                                                                                                                                                                                                   
+}
+@font-face {                                                                                                                                                                                                                                                                              
+    font-family:'Black';                                                                                                                                                                                                                                                                
+    src: url(America/GT-America-Black.woff) format("woff");                                                                                                                                                                                                                                                                                                                                                                                                                                   
 }
 
 
+h1{
+    font-family: "Black";
+    font-size: 80px;
+    line-height: 1.1;
+    letter-spacing: 2%;
+    color: #fff;
+}
+h2{
+    font-family: "Black";
+    font-size: 40px;
+    line-height: 1.1;
+    letter-spacing: 2%;
+    color: #fff;
+}
+h3{
+    font-family: "Bold";
+    font-size: 22px;
+    line-height: 1.3;
+    letter-spacing: 3%;
+    color: #fff;
+}
+
+button {
+    font-family: "Bold";
+    font-size: 16px;
+    line-height: 1;
+    letter-spacing: 1%;
+    color: #2A2E28;
+    background-color: #B6DB91;
+    padding: 18px 32px 18px 32px;
+    border-radius: 99px;;
+    margin-right: 14px;
+    transition: 0.3s;
+}
+.secondary{
+    color: #fff;
+    background-color: #555853;
+}
+.secondary:hover{
+    background-color: #60645E;
+}
+
+button:hover{
+    background-color: #99CD65;
+}
+.button-container{
+    margin-top: 82px;
+}
 
 /* -- Text Styles -- */
 
 body{
     display: flex;
-    align-items: center;
+    align-items: center;;
     justify-content: space-between;
-    flex-direction: ;
+    flex-direction: column;
     height: 100vh;
     width: 100vw;
-    background-color: #2A2E28;
 }
 
-.maggi{
+.hero{
     display: flex;
-    height: 100%;
-    background-image: url("img/maggi.jpg");
-    width: auto;
-    background-size: cover;
-}
-.maggi-mobile{
-    display: none;
+    width: 100vw;
+    height: 100vh;
+    background-color: #2A2E28;
+
 }
 
-h1{
-    font-size: 64px;
-    letter-spacing: -0,4px;
-    font-family: "Medium";
+.hero-left{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 60vw;
+    height: 100%;
+    padding-left: 6vw;
+    padding-bottom: 10vh;
+    box-sizing: border-box;
 }
+
+.hero-left h2{
+    margin-top: 22px;
+}
+.hero-left h3{
+    margin-top: 36px;
+}
+
+.test{
+    width: 100vw;
+    height: 600px;
+    background-color: #fff;
+}
+
 .logo-container{
     width: 100%;
     height: 100%;
@@ -125,7 +191,7 @@ h1{
 }
 
 .video-insert{
-  width: 50%;
+  width: 41vw;
   height: 100%;
   object-fit: cover;
 }
@@ -231,13 +297,6 @@ h1{
     }
     .logo-container{
         height: 30vh;
-    }
-    .maggi-mobile{
-        display: flex;
-        height: auto;
-        background-image: url("img/maggi-mobile.jpg");
-        width: 100%;
-        background-size: cover;
     }
     .video-insert{
         width: 100%;
