--- a/style.css
+++ b/style.css
@@ -85,27 +85,63 @@ input{
     src: url(America/GT-America-Black.woff) format("woff");                                                                                                                                                                                                                                                                                                                                                                                                                                   
 }
 
+header{
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    height: 72px;
+    box-sizing: border-box;
+    margin-top: 10px;
+    padding-left: 28px;
+    width: calc(100vw - 10vw);
+    border-radius: 99px;
+}
 
 h1{
     font-family: "Black";
     font-size: 80px;
     line-height: 1.1;
     letter-spacing: 2%;
-    color: #fff;
+    color: #ffffff;
 }
+
 h2{
     font-family: "Black";
     font-size: 40px;
     line-height: 1.1;
     letter-spacing: 2%;
-    color: #fff;
+    color: #ffffff;
 }
+
 h3{
     font-family: "Bold";
     font-size: 22px;
     line-height: 1.3;
     letter-spacing: 3%;
-    color: #fff;
+    color: #ffffff;
+}
+
+h4{
+    font-family: "Black";
+    font-size: 16px;
+    line-height: 1;
+    letter-spacing: 2%;
+    color: #ffffff;
+}
+
+.hero-left h4{
+    margin-bottom: 40px;
+}
+
+.white{
+    color: #fff !important;
+}
+
+.body-container h1, h2, h3{
+    color: #1D1F1C;
 }
 
 button {
@@ -117,8 +153,15 @@ button {
     background-color: #B6DB91;
     padding: 18px 32px 18px 32px;
     border-radius: 99px;;
-    margin-right: 14px;
+    margin-right: 12px;
     transition: 0.3s;
+}
+button:hover{
+    background-color: #99CD65;
+    cursor: pointer;
+}
+button:active{
+    background-color: #80BD42;
 }
 .secondary{
     color: #fff;
@@ -126,11 +169,12 @@ button {
 }
 .secondary:hover{
     background-color: #60645E;
+    cursor: pointer;
+}
+.secondary:active{
+    background-color: #6A6E68;
 }
 
-button:hover{
-    background-color: #99CD65;
-}
 .button-container{
     margin-top: 82px;
 }
@@ -144,6 +188,7 @@ body{
     flex-direction: column;
     height: 100vh;
     width: 100vw;
+    background-color: #F5F5F5;
 }
 
 .hero{
@@ -163,6 +208,7 @@ body{
     padding-left: 6vw;
     padding-bottom: 10vh;
     box-sizing: border-box;
+    background-image: url("");
 }
 
 .hero-left h2{
@@ -172,11 +218,6 @@ body{
     margin-top: 36px;
 }
 
-.test{
-    width: 100vw;
-    height: 600px;
-    background-color: #fff;
-}
 
 .logo-container{
     width: 100%;
@@ -184,6 +225,11 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.logo-container .img-container{
+
+
 }
 
 .logo{
@@ -195,6 +241,43 @@ body{
   height: 100%;
   object-fit: cover;
 }
+
+.body-container{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 88vw;
+    margin-top: 56px;
+}
+.sticky-cta-container{
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+.sticky-cta{
+    display: flex;
+    width: 20vw;
+    height: 363px;
+    background-color: #fff;
+    border-radius: 20px;
+    position: sticky;
+    overflow: hidden;
+    top: 105px;
+}
+.sticky-margin{
+    height: 56px;
+    width: 100%;
+}
+.sticky-cta .img-container img{
+    width: 100%;
+}
+
+.info-left{
+    margin-top: 40px;
+    width: 40vw;
+    height: 2000px;
+}
+
 
 /*FORMS*/
 .booking-form {
