--- a/style.css
+++ b/style.css
@@ -136,6 +136,14 @@ h4{
     color: #ffffff;
 }
 
+p{
+    font-family: "Bold";
+    font-size: 19px;
+    line-height: 1.3;
+    letter-spacing: 2.5%;
+    color: #ffffff;
+}
+
 .hero-left h4{
     margin-bottom: 40px;
 }
@@ -144,8 +152,12 @@ h4{
     color: #fff !important;
 }
 
-.body-container h1, h2, h3{
+.body-container h1, h2, h3, p{
     color: #1D1F1C;
+}
+
+.section-1 p{
+    margin-top: 30px;
 }
 
 button {
