--- a/style.css
+++ b/style.css
@@ -160,6 +160,95 @@ p{
     margin-top: 30px;
 }
 
+.gallery{
+    display: flex;
+    justify-content: space-between;
+    height: 492px;
+    margin-top: 60px;
+    border-radius: 16px;
+    overflow: hidden;
+
+}
+
+.gallery img{
+    width: 100%;
+    height: 242px;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+    overflow: hidden;
+}
+
+.gallery:hover img{
+    cursor: pointer;
+;
+}
+
+.gallery-1{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    width: calc(50% - 4px);
+}
+
+.gallery-2{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    width: calc(50% - 4px);
+}
+.gallery-2 img{
+    height: 117px;
+    overflow: hidden;
+}
+
+.gallery-2-top{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 242px;
+}
+
+.gallery-img-last{
+    height: 242px !important;
+    z-index: -2;
+}
+
+.gallery-2-bottom{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    height: 242px !important;
+
+}
+
+.gallery button{
+    color: #1D1F1C;
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.6);
+    overflow: hidden;
+    z-index: 99;
+}
+
+.gallery button:hover{
+    background-color: rgba(255, 255, 255, 1.0) !important;
+}
+
+
+.gallery-2-bottom button:before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.2); /* Semi-transparent background */
+  -webkit-backdrop-filter: blur(24px);
+  backdrop-filter: blur(24px);
+  display: block;
+  z-index: -1;
+}
+
+
 button {
     font-family: "Bold";
     font-size: 16px;
@@ -279,6 +368,7 @@ body{
     position: sticky;
     overflow: hidden;
     top: 105px;
+    min-width: 300px;
 }
 .sticky-margin{
     height: 56px;
