--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ header{
     padding-left: 28px;
     width: calc(100vw - 10vw);
     border-radius: 99px;
+    z-index: 999;
 }
 
 h1{
@@ -167,7 +168,7 @@ p{
     margin-top: 60px;
     border-radius: 16px;
     overflow: hidden;
-
+    position: relative;
 }
 
 .gallery img{
@@ -243,11 +244,15 @@ p{
 .gallery button{
     color: #1D1F1C;
     position: absolute;
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(24px);
     overflow: hidden;
     z-index: 99;
     padding: 13px 22px 13px 22px;
     font-size: 16px;
+    margin-bottom: 16px;
+    bottom: 0;
+    right: 0;
 }
 
 .gallery button:hover{
@@ -290,7 +295,7 @@ button:hover{
     cursor: pointer;
 }
 button:active{
-    background-color: #80BD42;
+    background-color: #80B04F;
 }
 .secondary{
     color: #fff;
@@ -386,7 +391,7 @@ body{
 .sticky-cta{
     display: flex;
     width: 20vw;
-    height: 363px;
+    height: auto;
     flex-direction: column;
     background-color: #fff;
     border-radius: 20px;
@@ -398,6 +403,7 @@ body{
 .sticky-cta button{
     width: 100%;
     padding: 16px;
+    margin-top: 28px;
 }
 .sticky-cta span{
     font-family: "Black";
@@ -405,10 +411,11 @@ body{
     line-height: 1.3;
     letter-spacing: 2%;
     color: #1D1F1C;
+    margin-left: 6px;
 }
 .sticky-container{
-    width: 100%;
-    height: auto;
+    display: flex;
+    flex-direction: column;
     padding: 20px;
     box-sizing: border-box;
 }
@@ -418,6 +425,9 @@ body{
     line-height: 1.3 !important;
     letter-spacing: 2% !important;
     color: #1D1F1C !important;
+    margin-top: 10px !important;
+    width: 100%;
+    margin-left: 6px;
 }
 .span-2{
     font-family: "Medium" !important;
@@ -425,6 +435,12 @@ body{
     line-height: 1 !important;
     letter-spacing: 0% !important;
     color: #1D1F1C !important;
+    margin-top: 20px;
+    width: 100%;
+    text-align: center;
+    margin-left: 0px !important;
+    opacity: 0.8;
+    margin-bottom: 10px;
 }
 .sticky-margin{
     height: 56px;
