--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ header{
     padding-left: 28px;
     width: calc(100vw - 10vw);
     border-radius: 99px;
-    z-index: 999;
+    z-index: 1001;
 }
 
 h1{
@@ -343,7 +343,7 @@ body{
 }
 
 .z-index{
-    z-index: 999;
+    z-index: 99;
 }
 
 .hero-left{
@@ -379,6 +379,44 @@ body{
 .logo-container .img-container{
 
 
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Cover the entire viewport */
+    z-index: 1000; /* Ensure it's above everything */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    overflow: hidden;
+}
+
+.modal-content {
+    position: relative;
+    margin: 10% auto;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 90%;
+    max-width: 400px;
+    overflow: auto;
+    max-height: 80vh;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+body.modal-open {
+    overflow: hidden; /* Disable scrolling */
+    position: fixed; /* Prevent body movement entirely */
+    width: 100%;
 }
 
 .logo{
