--- a/style.css
+++ b/style.css
@@ -591,22 +591,31 @@ body {
 .input-container select,
 .input-container textarea {
   width: 100%;
-  padding: 29px 29px 13px 14px;
+  padding: 27px 29px 13px 14px;
   box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.06);
   border-radius: 8px;
   background: #FFFFFF;
   font-family: "Regular";
+  line-height: 1.3;
   font-size: 17px;
   outline: none !important;
   box-sizing: border-box;
-  border: 1px solid #FFF;
+  border: 1.5px solid #FFF;
+  appearance: none;
 }
 
 .input-container input:focus,
 .input-container select:focus,
 .input-container textarea:focus {
-    border: 1px solid #000;
-    outline: 1px solid #000;
+    border: 1.5px solid #000;
+
+}
+
+.input-container input:hover,
+.input-container select:hover,
+.input-container textarea:hover {
+    border: 1.5px solid #000;
+    cursor: pointer;
 
 }
 
@@ -621,6 +630,17 @@ body {
   font-size: 13px;
   color: #2C2E2C;
   font-family: "Bold";
+}
+
+.custom-select::after {
+  content: url('img/arrow-down.svg'); /* Unicode character for arrow */
+  position: absolute;
+  height: 22px;
+  width: 22px;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; /* Ensures the arrow doesn't block clicks */
 }
 
 textarea {
