--- a/style.css
+++ b/style.css
@@ -555,13 +555,6 @@ body {
   background-color: #f9f9f9;
 }
 
-.form-container {
-  max-width: 700px;
-  margin: 40px auto;
-  background: #fff;
-  padding: 30px;
-  border-radius: 10px;
-}
 
 /* Title and Subtitle */
 
@@ -680,6 +673,29 @@ textarea {
   resize: none;
 }
 
+#decrement, #increment{
+    border-radius: 999px;
+    height: 40px;
+    width: 40px;
+    background-color: #F5F5F5;
+    background-image: url("img/minus.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    margin: 0;
+}
+
+#decrement:hover, #increment:hover {
+    background-color: #EBEBEB;
+}
+
+#decrement:active, #increment:active {
+    background-color: #E0E0E0;
+}
+
+#increment{
+    background-image: url("img/plus.svg") !important;
+}
+
 /* Package Selection */
 .packages {
   display: flex;
@@ -717,9 +733,7 @@ textarea {
   display: flex;
   flex-direction: column;
   width: 300px;
-  border: 1px solid #ccc;
   border-radius: 8px;
-  padding: 20px;
   cursor: pointer;
   text-align: center;
   transition: opacity 0.3s ease, transform 0.3s ease;
@@ -734,13 +748,16 @@ textarea {
 .package-content {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  align-items: flex-start;
 }
 
 .package .price {
-  margin-top: auto;
-  font-weight: bold;
-  color: #333;
+    font-size: 15px;
+    line-height: 1.3;
+    letter-spacing: 2%;
+    font-family: "Bold";
+    color: #333;
+    text-align: left;
 }
 
 /* Hover effect - dim all packages except the hovered one */
@@ -774,8 +791,6 @@ textarea {
 
 .popular-banner {
   position: absolute;
-  top: -10px;
-  left: 10px;
   background-color: #4caf50;
   color: #fff;
   padding: 5px 10px;
@@ -785,6 +800,11 @@ textarea {
 }
 
 /* Card hover end */
+
+
+.circular{
+    border-radius: 999px;
+}
 
 .package input {
   display: none;
@@ -812,7 +832,6 @@ textarea {
 
 .price {
   margin-top: 10px;
-  font-weight: bold;
   color: #333;
 }
 
@@ -820,17 +839,19 @@ textarea {
 .group-size {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 10px;
+  justify-content: space-between;
   margin-bottom: 20px;
+  box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.06);
+  width: 70%;
+  border-radius: 16px;
+  padding: 24px 20px;
+  margin: 0 auto;
+  background-color: white;
 }
 
 .group-size button {
   background: #34a853;
   color: #fff;
-  border: none;
-  padding: 5px 15px;
-  font-size: 1rem;
   cursor: pointer;
   border-radius: 4px;
   transition: background 0.3s;
@@ -841,11 +862,13 @@ textarea {
 }
 
 .group-size input {
-  width: 50px;
   text-align: center;
-  border: 1px solid #ddd;
+  font-family: "Regular";
+  font-size: 28px !important;
+  line-height: 1.3;
   border-radius: 4px;
   font-size: 1rem;
+  width: 60%;
 }
 
 /* Submit Button */
@@ -969,13 +992,20 @@ form button:hover {
 }
 
 .form-container {
-    max-width: 600px;
-    background-color: white;
-    padding: 30px;
+    background-color: #F5F5F5;
+    padding: 4vw;
     border-radius: 10px;
-
+    width: 55vw;
 }
 
+.form-head{
+    font-family: "Black";
+    font-size: 16px;
+    line-height: 1.2;
+    letter-spacing: 2%;
+    text-transform: uppercase;
+    color: #2C2E2C;
+}
 
 .form-header p {
     font-size: 1.2em;
@@ -991,10 +1021,9 @@ form button:hover {
 }
 
 .package {
-    background-color: #fafafa;
     border-radius: 10px;
     text-align: center;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.06);
     flex: 1;
     position: relative;
     cursor: pointer;
@@ -1009,9 +1038,12 @@ form button:hover {
 }
 
 .package h3 {
-    font-size: 1.2em;
+    font-size: 22px;
+    line-height: 1.3;
+    margin-top: 52px;
+    font-family: "Black";
     margin-bottom: 10px;
-    color: #333;
+    color: #2C2E2C;
 }
 
 .package ul {
@@ -1021,16 +1053,8 @@ form button:hover {
     color: #666;
 }
 
-.package .price {
-    font-weight: bold;
-    margin-top: 10px;
-    color: #333;
-}
-
 .package input[type="radio"]:checked + .package-details {
     background-color: #e0f7e8; /* Highlight selected package */
-    border: 2px solid #6fcf97;
-    border-radius: 10px;
 }
 
 .popular .tag {
