--- a/style.css
+++ b/style.css
@@ -399,7 +399,8 @@ body{
 }
 
 .modal-content {
-    position: relative;
+    display: flex;
+    flex-direction: column;
     background: white;
     border-radius: 20px;
     width: 55vw;
@@ -420,27 +421,35 @@ body{
     height: 20px;
 }
 
+.close-container{
+    display: flex;
+    justify-content: flex-end;
+    width: 55vw;
+    padding: 12px;
+    position: fixed;
+    z-index: 1000;
+}
+
 .close {
+    right: 0px;
     transition: 0.3s;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 48px;
     height: 48px;
-    position: absolute;
-    top: 12px;
-    right: 12px;
+    z-index: 999;
     cursor: pointer;
     overflow: hidden;
     border-radius: 99px;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(24px);
     -webkit-backdrop-filter: blur(24px);
 
 }
 
 .close:hover{
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 1);
 }
 
 body.modal-open {
@@ -871,21 +880,17 @@ textarea {
   width: 60%;
 }
 
-/* Submit Button */
-form button {
-  width: 100%;
-  background: #34a853;
-  color: #fff;
-  font-size: 1rem;
-  border: none;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 6px;
-  transition: background 0.3s;
-}
-
-form button:hover {
-  background: #2c8c43;
+.form-cta{
+    display: flex;
+    justify-content: center;
+    width: 55vw;
+    padding: 12px;
+    background-color: white;
+    position: fixed;
+    z-index: 998;
+    bottom: 1.5vh;
+    margin-left: -4vw;
+    border-radius: 0px 0px 20px 20px;
 }
 
 
@@ -1350,6 +1355,10 @@ textarea {
 .tour-option-box p {
     margin: 5px 0;
     font-size: 14px;
+}
+
+.flatpickr-calendar {
+    z-index: 1050; /* Adjust based on your modal's z-index */
 }
 
 /* Hide radio buttons */
