--- a/style.css
+++ b/style.css
@@ -591,6 +591,20 @@ body {
   pointer-events: none;
 }
 
+.form-post-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.package-content li{
+    font-family: "Medium";
+    color: #2C2E2C;
+    font-size: 13px;
+    line-height: 1.6;
+    letter-spacing: 1%;
+    text-align: left;
+}
+
 .input-container input,
 .input-container select,
 .input-container textarea {
@@ -709,7 +723,6 @@ textarea {
 .packages {
   display: flex;
   gap: 20px;
-  margin-bottom: 20px;
 }
 
 .package {
@@ -781,11 +794,10 @@ textarea {
 
 /* Selected (Active) state */
 .package input[type="radio"]:checked + .package-content {
-  border: 2px solid #4caf50;
+  border: 3px solid #6E9B41;
+  border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  background-color: #f0fff0;
   opacity: 1 !important; /* Ensure selected package is fully visible */
-  transform: scale(1.05); /* Slightly enlarge selected package */
 }
 
 /* Handle both hover and selected states together */
@@ -798,14 +810,53 @@ textarea {
   position: relative;
 }
 
+.line-seperator{
+    width: 100%;
+    height: 1px;
+    border-radius: 100px;
+    background-color: #EBEBEB;
+    margin: 36px 0px 36px 0px;
+}
+
 .popular-banner {
   position: absolute;
-  background-color: #4caf50;
-  color: #fff;
-  padding: 5px 10px;
+  background-color: #B6DB91;
+  color: #2C2E2C;
+  padding: 6px 10px;
+  text-transform: uppercase;
+  letter-spacing: 2%;
+  line-height: 1.2;
   font-size: 12px;
-  font-weight: bold;
-  border-radius: 4px;
+  font-family: "Black";
+}
+
+.popular-banner::after{
+    position: absolute;
+    z-index: 99;
+    content: url('img/bnr-right.svg');
+    height: 26px;
+    width: 11px;
+    top: 0px;
+    margin-left: 10px;
+}
+
+.popular-banner::before{
+    position: absolute;
+    z-index: 99;
+    content: url('img/bnr-left.svg');
+    height: 26px;
+    width: 11px;
+    top: 0px;
+    margin-left: -21px;
+}
+
+
+.package-left{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    padding: 20px;
 }
 
 /* Card hover end */
@@ -826,17 +877,8 @@ textarea {
 
 .package-content {
   position: relative;
-}
-
-.popular-banner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: #34a853;
-  color: #fff;
-  font-size: 0.8rem;
-  padding: 5px 10px;
-  border-radius: 0 0 8px 0;
+  display: flex;
+  align-items: center;
 }
 
 .price {
@@ -1032,6 +1074,7 @@ textarea {
     flex: 1;
     position: relative;
     cursor: pointer;
+    opacity: 1;
 }
 
 .package input[type="radio"] {
