--- a/style.css
+++ b/style.css
@@ -857,7 +857,7 @@ textarea {
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
-    padding: 20px;
+    padding: 8px 20px 28px 20px;
 }
 
 /* Card hover end */
@@ -1089,9 +1089,9 @@ textarea {
 .package h3 {
     font-size: 22px;
     line-height: 1.3;
-    margin-top: 52px;
+    margin-top: 60px;
     font-family: "Black";
-    margin-bottom: 10px;
+    margin-bottom: 4px;
     color: #2C2E2C;
 }
 
