--- a/style.css
+++ b/style.css
@@ -171,6 +171,16 @@ p{
     position: relative;
 }
 
+.gallery a {
+    color: inherit; /* Use parent's color */
+    text-decoration: none; /* Removes underline, if applied */
+    background: none; /* Removes background */
+    padding: 0; /* Removes padding */
+    margin: 0; /* Removes margin */
+    border: none; /* Removes borders */
+    border-radius: 0;
+}
+
 .gallery img{
     width: 100%;
     height: 242px;
