--- a/style.css
+++ b/style.css
@@ -1553,7 +1553,7 @@ textarea {
 
 
 
-@media only screen and (max-width: 640px){
+@media only screen and (max-width: 880px){
 
     h1 {
         font-size: 48px;
@@ -1561,9 +1561,32 @@ textarea {
     body{
         flex-direction: column;
     }
-    .maggi{
-        display: none;
+    .hero{
+        flex-direction: column;
     }
+
+    header{
+        width: 100%;
+        background-color: transparent;
+    }
+
+    header path{
+        fill: #fff;
+    }
+
+    .hero-left{
+        width: 100%;
+        justify-content: flex-start;
+        padding-left: 0;
+        margin-top: 72px;
+        align-items: center;
+        padding-bottom: 0;
+    }
+
+    .hero-left h1, h2, h3, h4{
+        text-align: center;
+    }
+
     .logo{
         width: 60vw;
     }
@@ -1571,7 +1594,8 @@ textarea {
         height: 30vh;
     }
     .video-insert{
-        display: none;
+        width: 100%;
+        height: 43vh;
 }
 
 
