--- a/style.css
+++ b/style.css
@@ -1558,6 +1558,38 @@ textarea {
     h1 {
         font-size: 48px;
     }
+
+    h2{
+        font-size: 28px;
+    }
+    h3{
+        font-size: 16px;
+        letter-spacing: 3%;
+    }
+    h4{
+        font-size: 16px;
+    }
+
+    .hero-left h4{
+        margin-bottom: 20px;
+    }
+
+    .hero-left h3{
+        margin-top: 20px;
+    }
+
+    .hero-left h2{
+        margin-top: 12px;
+    }
+
+    .button-container{
+        margin-top: 50px;
+    }
+
+    .z-index{
+        margin-top: 30px;
+    }
+
     body{
         flex-direction: column;
     }
@@ -1581,10 +1613,15 @@ textarea {
         margin-top: 72px;
         align-items: center;
         padding-bottom: 0;
+        z-index: 100;
     }
 
     .hero-left h1, h2, h3, h4{
         text-align: center;
+    }
+
+    .sticky-cta{
+        display: none;
     }
 
     .logo{
